# advent-of-code-2021

./: .gitignore  README.md
hs-aoc2021/: CHANGELOG.md  README.md  cabal.project.freeze  hs-aoc2021.cabal  stack.yaml
hs-aoc2021/app/: Main.hs
hs-aoc2021/src/: HsAoc2021.hs
hs-aoc2021/src/HsAoc2021/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Types.hs
