cabal-version:       3.0
name:                hs-aoc2021
version:             0.0.1.0
synopsis:            Advent of code 2021 in Haskell
description:         Advent of code 2021 in Haskell
license:             NONE
author:              essic
maintainer:          essic <lollancf37@gmail.com>
copyright:           2021 essic
category:            Game
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 9.0.1

common common-options
  build-depends:       base >= 4.13
                     , relude
 
  default-extensions:  OverloadedStrings 
                       NoImplicitPrelude

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     HsAoc2021,
                       HsAoc2021.Day1,
                       HsAoc2021.Day2,
                       HsAoc2021.Day3,
                       HsAoc2021.Day4,
                       HsAoc2021.Types
  
  build-depends:     , safe ^>= 0.3
                     , matrix ^>= 0.3
                     , vector ^>= 0.12
                     , text ^>= 1.2
                     , megaparsec ^>= 9.2
                     , either ^>= 5.0
  
executable hs-aoc2021
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  
  build-depends:       hs-aoc2021
                      
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark hs-aoc2021-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       gauge
                     , hs-aoc2021
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
